Replace dplyr with base R

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,8 +17,8 @@ ggplot2. `make_alignment_dummies`, `geom_gene_arrow` and `theme_genes` are
 demonstrated below.
 
 ```{r gggenes_example, fig.width = 8, fig.height = 8}
-library(ggplot2)
-library(gggenes)
+# library(ggplot2)
+# library(gggenes)
 
 dummies <- make_alignment_dummies(
   example_genes,
