--- a/README.Rmd
+++ b/README.Rmd
@@ -13,6 +13,9 @@ knitr::opts_chunk$set(
   fig.path = "man/figures/README-"
 )
 ```
+[![Travis-CI Build Status](https://travis-ci.org/wilkox/gggenes.svg?branch=master)](https://travis-ci.org/wilkox/gggenes)
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/gggenes)](https://cran.r-project.org/package=gggenes)
+
 **'gggenes' is a (quite small) set of tools for drawing gene layout maps with
 'ggplot2.'**
 
