--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,8 @@
 ---
-output: 
-  rmarkdown::github_document:
+output:
+  github_document:
     html_preview: true
+    toc: true
     fig_width: 8
     fig_height: 8
 ---
@@ -19,9 +20,9 @@ knitr::opts_chunk$set(
 **'gggenes' is a (quite small) set of tools for drawing gene arrow maps with
 'ggplot2.'**
 
-## Installation
+## Installing 'gggenes'
 
-Install the release version of 'gggenes' from CRAN:
+Install the stable version of 'gggenes' from CRAN:
 
 `install.packages("gggenes")`
 
@@ -29,15 +30,16 @@ If you want the development version, install it from GitHub:
 
 `devtools::install_github("wilkox/gggenes")`
 
-## `geom_gene_arrow`
+## Drawing gene arrows with `geom_gene_arrow`
 
 `geom_gene_arrow` is a 'ggplot2' geom that represents genes with arrows. The
-start and end positions of the genes within their molecule(s) are mapped to the
-`xmin` and `xmax` aesthetics respectively. The `y` aesthetic must be mapped to
-the molecule(s). If you are drawing more than one molecule, and the numerical
-positions of the genes are not similar across molecules, you almost certainly
-want to facet the plot with `scales = "free"` to avoid drawing ridiculously
-large molecules with ridiculously tiny genes.
+start and end locations of the genes within their molecule(s) are mapped to the
+`xmin` and `xmax` aesthetics respectively. These start and end locations are
+used to determine the directions in which the arrows point. The `y` aesthetic
+must be mapped to the molecule(s). If you are drawing more than one molecule,
+and the numerical locations of the genes are not similar across molecules, you
+almost certainly want to facet the plot with `scales = "free"` to avoid drawing
+ridiculously large molecules with ridiculously tiny genes.
 
 ```{r geom_gene_arrow}
 library(ggplot2)
@@ -50,7 +52,7 @@ ggplot2::ggplot(example_genes, ggplot2::aes(xmin = start, xmax = end, y =
   ggplot2::scale_fill_brewer(palette = "Set3")
 ```
 
-## `theme_genes`
+## Beautifying the plot with `theme_genes`
 
 Because the resulting plot can look cluttered, a 'ggplot2' theme `theme_genes`
 is provided with some sensible defaults.
@@ -64,13 +66,12 @@ ggplot2::ggplot(example_genes, ggplot2::aes(xmin = start, xmax = end, y =
   theme_genes()
 ```
 
-## `make_alignment_dummies`
+## Aligning genes across facets with `make_alignment_dummies`
 
-Often you might want a certain gene to be vertically aligned across the faceted
-molecules. A helper function `make_alignment_dummies` is provided that generates
-a set of 'dummy' genes such that, if the dummies are added to the plot with
-`geom_blank`, they will extend the range of each facet to visually align the
-selected gene across facets.
+Often you will want a certain gene to be vertically aligned across the faceted
+molecules. `make_alignment_dummies` generates a set of 'dummy' genes that if
+added to the plot with `geom_blank` will extend the range of each facet to
+visually align the selected gene across facets.
 
 ```{r make_alignment_dummies}
 dummies <- make_alignment_dummies(
@@ -88,13 +89,13 @@ ggplot2::ggplot(example_genes, ggplot2::aes(xmin = start, xmax = end, y =
   theme_genes()
 ```
 
-## `geom_gene_label`
+## Labelling genes with `geom_gene_label` (development version only)
 
-To label individual genes, set the `label` aesthetic and use `geom_gene_label`.
-`geom_gene_label` uses the ['ggfittext'](https://github.com/wilkox/ggfittext)
-package to fit the label text inside the gene arrows; see the 'ggfittext'
-documentation for more details on how it resizes and reflows text to make it
-fit.
+To label individual genes, provide a `label` aesthetic and use
+`geom_gene_label`. `geom_gene_label` uses the
+['ggfittext'](https://github.com/wilkox/ggfittext) package to fit the label
+text inside the gene arrows; see the 'ggfittext' documentation for more details
+on how it resizes and reflows text to make it fit.
 
 ```{r labelled_genes}
 ggplot2::ggplot(example_genes, ggplot2::aes(xmin = start, xmax = end, y =
@@ -107,3 +108,27 @@ ggplot2::ggplot(example_genes, ggplot2::aes(xmin = start, xmax = end, y =
   theme_genes()
 ```
 
+## Reversing some genes with the optional `forward` aesthetic (development version only)
+
+Sometimes you might want to reverse the direction of some genes from that
+implied by `xmin` and `xmax`. For example, you might want to draw both a
+forward and reverse strand within each facet, and reverse the direction of all
+the genes on the reverse strand. The optional `forward` aesthetic is intended
+for this sort of situation. 
+
+If `forward` is TRUE (the default), or any value that coerces to TRUE such as
+1, the gene will be drawn pointing in the normal direction, i.e. that implied
+by `xmin` and `xmax`. If `forward` is FALSE, or any value that coerces to FALSE
+such as -1, the gene will be drawn in the reverse of this implied direction. In
+the following example, the `forward` aesthetic has been used to reverse the
+direction of all genes on the reverse strand from that implied by `xmin` and
+`xmax`.
+
+```{r reversing_direction, fig.height = 3}
+example_genes$direction <- ifelse(example_genes$strand == "forward", 1, -1)
+ggplot2::ggplot(subset(example_genes, molecule == "Genome1"), 
+                ggplot2::aes(xmin = start, xmax = end, y = strand, fill = gene, 
+                             forward = direction)) +
+  geom_gene_arrow() +
+  theme_genes()
+```
