Prepare for CRAN submission

--- a/README.Rmd
+++ b/README.Rmd
@@ -89,7 +89,7 @@ ggplot2::ggplot(example_genes, ggplot2::aes(xmin = start, xmax = end, y =
   theme_genes()
 ```
 
-## Labelling genes with `geom_gene_label` (development version only)
+## Labelling genes with `geom_gene_label`
 
 To label individual genes, provide a `label` aesthetic and use
 `geom_gene_label`. `geom_gene_label` uses the
@@ -108,7 +108,7 @@ ggplot2::ggplot(example_genes, ggplot2::aes(xmin = start, xmax = end, y =
   theme_genes()
 ```
 
-## Reversing some genes with the optional `forward` aesthetic (development version only)
+## Reversing some genes with the optional `forward` aesthetic
 
 Sometimes you might want to reverse the direction of some genes from that
 implied by `xmin` and `xmax`. For example, you might want to draw both a
