--- a/vignettes/introduction-to-gggenes.Rmd
+++ b/vignettes/introduction-to-gggenes.Rmd
@@ -22,9 +22,9 @@ knitr::opts_chunk$set(
 'gggenes' is a (quite small) set of tools for drawing gene arrow maps with
 'ggplot2.'
 
-## Drawing gene arrows with `geom_gene_arrow`
+## Drawing gene arrows with `geom_gene_arrow()`
 
-`geom_gene_arrow` is a 'ggplot2' geom that represents genes with arrows. The
+`geom_gene_arrow()` is a 'ggplot2' geom that represents genes with arrows. The
 start and end locations of the genes within their molecule(s) are mapped to the
 `xmin` and `xmax` aesthetics respectively. These start and end locations are
 used to determine the directions in which the arrows point. The `y` aesthetic
@@ -42,10 +42,10 @@ ggplot(example_genes, aes(xmin = start, xmax = end, y = molecule, fill = gene)) 
   scale_fill_brewer(palette = "Set3")
 ```
 
-## Beautifying the plot with `theme_genes`
+## Beautifying the plot with `theme_genes()`
 
-Because the resulting plot can look cluttered, a 'ggplot2' theme `theme_genes`
-is provided with some sensible defaults.
+Because the resulting plot can look cluttered, a 'ggplot2' theme
+`theme_genes()` is provided with some sensible defaults.
 
 ```{r theme_genes}
 ggplot(example_genes, aes(xmin = start, xmax = end, y = molecule, fill = gene)) +
@@ -55,11 +55,11 @@ ggplot(example_genes, aes(xmin = start, xmax = end, y = molecule, fill = gene)) 
   theme_genes()
 ```
 
-## Aligning genes across facets with `make_alignment_dummies`
+## Aligning genes across facets with `make_alignment_dummies()`
 
 Often you will want a certain gene to be vertically aligned across the faceted
-molecules. `make_alignment_dummies` generates a set of 'dummy' genes that if
-added to the plot with `geom_blank` will extend the range of each facet to
+molecules. `make_alignment_dummies()` generates a set of 'dummy' genes that if
+added to the plot with `ggplot2::geom_blank()` will extend the range of each facet to
 visually align the selected gene across facets.
 
 ```{r make_alignment_dummies}
@@ -77,10 +77,10 @@ ggplot(example_genes, aes(xmin = start, xmax = end, y = molecule, fill = gene)) 
   theme_genes()
 ```
 
-## Labelling genes with `geom_gene_label`
+## Labelling genes with `geom_gene_label()`
 
 To label individual genes, provide a `label` aesthetic and use
-`geom_gene_label`. `geom_gene_label` uses the
+`geom_gene_label()`. `geom_gene_label()` uses the
 ['ggfittext'](https://github.com/wilkox/ggfittext) package to fit the label
 text inside the gene arrows; see the 'ggfittext' documentation for more details
 on how it resizes and reflows text to make it fit.
@@ -125,15 +125,15 @@ ggplot(
 ## Viewing subgene segments
 
 We can highlight subgene segments, such as protein domains or local alignments,
-using `geom_subgene_arrow`.
+using `geom_subgene_arrow()`.
 
-This works similarly to `geom_gene_arrow`, but in addition to `xmin` and `xmax`
+This works similarly to `geom_gene_arrow()`, but in addition to `xmin` and `xmax`
 (which determine the gene boundaries), we need the aesthetics `xsubmin` and
-`xsubmax` to determine the subgene boundaries. `geom_gene_arrow` will produce
+`xsubmax` to determine the subgene boundaries. `geom_gene_arrow()` will produce
 pretty arrowheads, as long as `xmin >= xsubmin` and `xmax >= xsubmax` for all
 subgenes (subgenes that break gene boundaries will be skipped with a warning).
 
-The suggested usage is to use `geom_gene_arrow` with no fill, and then add a
+The suggested usage is to use `geom_gene_arrow()` with no fill, and then add a
 subgene layer over this:
 
 ```{r subgenes}
@@ -146,8 +146,8 @@ ggplot(example_genes, aes(xmin = start, xmax = end, y = molecule)) +
   theme_genes()
 ```
 
-To label subgenes, we can use `geom_subgene_label`, which works similarly to
-`geom_gene_label` with the major difference that it requires `xsubmin` and
+To label subgenes, we can use `geom_subgene_label()`, which works similarly to
+`geom_gene_label()` with the major difference that it requires `xsubmin` and
 `xsubmax` aesthetics (not `xmin` and `xmax`).
 
 ```{r subgene labels, fig.height = 2}
