Tests and documentation for new geoms

--- a/README.Rmd
+++ b/README.Rmd
@@ -176,3 +176,28 @@ ggplot(subset(example_genes, molecule == "Genome4" & gene == "genA"),
     min.size = 0
   )
 ```
+
+## Experimental feature: drawing point genetic features
+
+We can draw point genetic features, such as restriction sites or transcription
+start sites, with `geom_feature()`, and label them with `geom_feature_label()`.
+Both of these geoms take an optional `forward` aesthetic to indicated whether a
+feature is oriented and, if so, in what direction (`TRUE` meaning oriented
+towards the right of the x-axis and `FALSE` meaning towards the left).
+
+```{r}
+ggplot(example_genes, aes(xmin = start, xmax = end, y = molecule, fill = gene)) +
+  geom_feature(
+    data = example_features,
+    aes(x = position, y = molecule, forward = forward)
+  ) +
+  geom_feature_label(
+    data = example_features,
+    aes(x = position, y = molecule, label = name, forward = forward)
+  ) +
+  geom_gene_arrow() +
+  geom_blank(data = example_dummies) +
+  facet_wrap(~ molecule, scales = "free", ncol = 1) +
+  scale_fill_brewer(palette = "Set3") +
+  theme_genes()
+```
