Minor adjustments to new feature geoms - Reduce default size for `geom_feature_label()` - Fix vertical alignment of oriented and non-oriented features - More sensible example data in `example_features`

--- a/README.Rmd
+++ b/README.Rmd
@@ -186,7 +186,7 @@ feature is oriented and, if so, in what direction (`TRUE` meaning oriented
 towards the right of the x-axis and `FALSE` meaning towards the left).
 
 ```{r}
-ggplot(example_genes, aes(xmin = start, xmax = end, y = molecule, fill = gene)) +
+ggplot(example_genes, aes(xmin = start, xmax = end, y = molecule, fill = gene, label = gene)) +
   geom_feature(
     data = example_features,
     aes(x = position, y = molecule, forward = forward)
@@ -196,6 +196,7 @@ ggplot(example_genes, aes(xmin = start, xmax = end, y = molecule, fill = gene)) 
     aes(x = position, y = molecule, label = name, forward = forward)
   ) +
   geom_gene_arrow() +
+  geom_gene_label() +
   geom_blank(data = example_dummies) +
   facet_wrap(~ molecule, scales = "free", ncol = 1) +
   scale_fill_brewer(palette = "Set3") +
