Fix errors in manuscript

--- a/paper.bib
+++ b/paper.bib
@@ -49,15 +49,19 @@
    pages={500–507}
  }
 
-@article{Erratum1976,
-  volume={260},
-  ISSN={0028-0836},
-  DOI={10.1038/260810c0},
-  number={5554},
-  journal={Nature},
-  year={1976},
-  pages={810–810}
-} 
+@article{
+ Nature_1976,
+ title={Errata},
+ volume={260},
+ ISSN={0028-0836},
+ DOI={10.1038/260810c0},
+ number={5554},
+ journal={Nature},
+ author={{Nature Editors}},
+ year={1976},
+ month={Apr},
+ pages={810}
+}
 
 @article{
   Wright2022,
