--- a/README.Rmd
+++ b/README.Rmd
@@ -177,13 +177,13 @@ ggplot(subset(example_genes, molecule == "Genome4" & gene == "genA"),
   )
 ```
 
-## Experimental feature: drawing point genetic features
+## Drawing point genetic features
 
 We can draw point genetic features, such as restriction sites or transcription
 start sites, with `geom_feature()`, and label them with `geom_feature_label()`.
-Both of these geoms take an optional `forward` aesthetic to indicated whether a
+Both of these geoms take an optional `forward` aesthetic to indicate whether a
 feature is oriented and, if so, in what direction (`TRUE` meaning oriented
-towards the right of the x-axis and `FALSE` meaning towards the left).
+towards the right and `FALSE` meaning towards the left).
 
 ```{r}
 ggplot(example_genes, aes(xmin = start, xmax = end, y = molecule, fill = gene, label = gene)) +
@@ -202,6 +202,12 @@ ggplot(example_genes, aes(xmin = start, xmax = end, y = molecule, fill = gene, l
   scale_fill_brewer(palette = "Set3") +
   theme_genes()
 ```
+
+## Other genetic features
+
+Do you have an idea, suggestion or request for another type of feature for
+gggenes to draw? [Open a new issue](https://github.com/wilkox/gggenes/issues/new) 
+and it will be considered.
 
 ## Related packages
 
